--- a/app/views/site/_study_settings_form.html.erb
+++ b/app/views/site/_study_settings_form.html.erb
@@ -19,7 +19,7 @@
   </div>
   <div class="form-group row">
     <div class="col-md-4">
-      <%= f.label :embargo, 'Data Embargo Date' %>&nbsp;<span class='fas fa-question-circle' data-toggle='tooltip' title='Downloads will be prevented for everyone except study owners & shared users.  The embargo will expire on the date specified (leave blank to allow downloads)' data-placement='right'></span><br />
+      <%= f.label :embargo, 'Data Release Date' %>&nbsp;<span class='fas fa-question-circle' data-toggle='tooltip' title='Setting a Data Release Date will prevent downloads for everyone except study owners & shared users, and will expire at 12AM on the date specified (leave blank to allow downloads)' data-placement='right'></span><br />
       <%= f.text_field :embargo, class: 'form-control datepicker' %>
     </div>
     <div class="col-md-4">
