--- a/app/views/branding_groups/_form.html.erb
+++ b/app/views/branding_groups/_form.html.erb
@@ -30,7 +30,7 @@
   </div>
 
   <div class="form-group">
-    <%= f.label :external_link_url, 'External Link URL <span class="fas fa-question-circle" data-toggle="tooltip" data-placement="top" title="This link will be available in the \'Help & Resources\' dropdown inside the collection, as well as in the Collections Directory."></span>'.html_safe %>
+    <%= f.label :external_link_url, 'External Link URL <span class="fas fa-question-circle" data-toggle="tooltip" data-placement="top" title="This link will be available in the \"Help & Resources\" dropdown inside the collection, as well as in the Collections Directory."></span>'.html_safe %>
     <%= f.text_field :external_link_url, class: 'form-control' %>
   </div>
   <div class="form-group">
