--- a/app/javascript/styles/_brand.scss
+++ b/app/javascript/styles/_brand.scss
@@ -205,18 +205,30 @@
   z-index: -1000;
 }
 
-.collections-list li {
-  display: flex;
-  padding: 1em 0em 1em 0em;
-  border-bottom: 1px solid #ccc;
-  .collections-logo {
-    width: 180px;
-    img {
-      max-width: 180px;
+.collections-list {
+  background: #fff;
+  padding: 0em 1em;
+  margin-top: 0.5em;
+  border-radius: 5px;
+  li {
+    display: flex;
+    padding: 1em 0em 1em 0em;
+    border-bottom: 1px solid #ccc;
+    .collections-logo {
+      width: 180px;
+      img {
+        max-width: 180px;
+      }
     }
-  }
-  .collections-name {
-    text-align: left;
-    padding-left: 2em;
+    .collections-name {
+      text-align: left;
+      padding-left: 2em;
+    }
+    .collections-actions {
+      margin-left: auto;
+    }
+    &:last-of-type {
+      border-bottom: none;
+    }
   }
 }
