--- a/app/views/branding_groups/index.html.erb
+++ b/app/views/branding_groups/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Branding Groups</h1>
+<h1>Collections</h1>
 <div class="row">
   <div class="col-md-12">
     <div class="table-responsive">
@@ -31,7 +31,7 @@
         </table>
       </div>
     </div>
-    <p><%= scp_link_to "<i class='fas fa-plus'></i> New Branding Group".html_safe, new_branding_group_path, class: 'btn btn-lg btn-success', id: 'new-branding-group' %></p>
+    <p><%= scp_link_to "<i class='fas fa-plus'></i> New Collection".html_safe, new_branding_group_path, class: 'btn btn-lg btn-success', id: 'new-branding-group' %></p>
   </div>
 </div>
 
