--- a/app/views/studies/load_annotation_options.js.erb
+++ b/app/views/studies/load_annotation_options.js.erb
@@ -1,1 +1,2 @@
 $("#study_default_options_annotation").html("<%= escape_javascript(select_tag :annotation, grouped_options_for_select(@default_cluster_annotations, set_annotation_value(@study, {})), class: 'form-control' )%>");
+$("#study_default_options_annotation").html("<%= escape_javascript(select_tag :annotation, grouped_options_for_select(@default_cluster_annotations, set_annotation_value(@study, {})), class: 'form-control' )%>");
