--- a/app/views/site/_study_settings_form.html.erb
+++ b/app/views/site/_study_settings_form.html.erb
@@ -54,7 +54,7 @@
           <div class="col-sm-12">
             <p>Custom Colors</p>
               <%= opts.label :group_colors, 'Default Annotation' %><br />
-              <%= opts.select :group_colors, grouped_options_for_select(@default_cluster_annotations, @study.default_annotation), {},class: 'form-control' %>
+              <%= opts.select :group_colors, options_for_select(@annotation_groups, @study.default_annotation), {},class: 'form-control' %>
           </div>
         </div>
         <div class="form-group row">
