--- a/app/views/site/_study_title_bar.html.erb
+++ b/app/views/site/_study_title_bar.html.erb
@@ -1,4 +1,4 @@
-<% content_for(:html_title) { "#{@study.name} - Single Cell Portal" } %>
+<% content_for(:html_title) { "#{@study.accession} - Single Cell Portal" } %>
 
 <div class="row">
   <div class="col-md-12">
