--- a/app/javascript/styles/_scatterPlot.scss
+++ b/app/javascript/styles/_scatterPlot.scss
@@ -21,6 +21,8 @@
 
 .scatter-legend-head {
   margin: 5px 10px 10px 10px;
+  display: flex;
+  flex-direction: column;
 }
 
 .scatter-legend-name {
@@ -98,3 +100,34 @@
     opacity: 1;
   }
 }
+
+.no-border {
+  border-style: hidden;
+  outline: none;
+}
+
+.legend-search-icon {
+  border-style: hidden;
+  color: $action-color;
+  padding: 5px 5px 5px 10px;
+}
+
+.legend-search {
+  display: flex;
+  align-items: center;
+  border-radius: 10px;
+  border: 1px solid $action-color;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  font-weight: 500;
+  height: 38px;
+}
+
+.legend-top {
+  
+}
+
+.legend-bottom {
+  
+}
+
