--- a/app/javascript/styles/_scatterPlot.scss
+++ b/app/javascript/styles/_scatterPlot.scss
@@ -109,7 +109,7 @@
 .legend-search-icon {
   border-style: hidden;
   color: $action-color;
-  padding: 5px 5px 5px 10px;
+  padding: 5px 5px 5px 5px;
 }
 
 .legend-search {
@@ -121,13 +121,5 @@
   margin-bottom: 5px;
   font-weight: 500;
   height: 38px;
+  width: 100%
 }
-
-.legend-top {
-  
-}
-
-.legend-bottom {
-  
-}
-
