--- a/app/javascript/styles/_scatterPlot.scss
+++ b/app/javascript/styles/_scatterPlot.scss
@@ -104,6 +104,7 @@
 .cluster-external-link-container {
   padding-bottom: 10px;
   margin-bottom: 12px;
+  border-bottom: 1px solid #CCC;
 }
 
 .no-border {
