--- a/app/javascript/styles/_explore.scss
+++ b/app/javascript/styles/_explore.scss
@@ -209,3 +209,12 @@
 	}
 }
 
+.de-download-button{
+	margin-right: 0.5em;
+	margin-left: 1em;
+	display: inline-block;
+	vertical-align: middle;
+	padding: 2px 5px;
+	border-radius: 4px;
+  }
+  
