--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -4,7 +4,7 @@
 
 <div id="profile-tab-root">
   <ul class="nav nav-tabs" role="tablist" id="profile-tabs">
-    <li role="presentation" class="profile-nav active" id="profile-emails-nav"><a href="#profile-emails" data-toggle="tab">Email Delivery</a></li>
+    <li role="presentation" class="profile-nav active" id="profile-emails-nav"><a href="#profile-emails" data-toggle="tab">Preferences</a></li>
     <% if @profiles_available %>
       <li role="presentation" class="profile-nav" id="profile-firecloud-nav"><a href="#profile-firecloud" data-toggle="tab">Terra Profile</a></li>
     <% else %>
@@ -14,12 +14,34 @@
 
   <div class="tab-content top-pad">
     <div class="tab-pane active in" id="profile-emails" role="tabpanel">
+      <%= form_for(@user, url: update_profile_path, html: {class: 'form', id: 'update-user-session', data: {remote: true}}) do |f| %>
+        <div class="form-group">
+          <%= f.hidden_field :use_short_session %>
+          <% button_text = @user.use_short_session ? "15m <i class='fas fa-fw fa-toggle-on'></i>".html_safe : "24h <i class='fas fa-fw fa-toggle-off'></i>".html_safe %>
+          <h3>
+            Session length
+            <%= link_to button_text, '#/', class: 'btn btn-default user-toggle',
+                        data: { input_id: 'user_use_short_session', form_id: 'update-user-session' } %>
+          </h3>
+          <p class="help-block">
+            Toggles how long before you are signed out of your session.  The two options are 24 hours (default) or 15
+            minutes (recommended for shared workstations or compliance environments).</p>
+        </div>
+      <% end %>
+
       <%= form_for(@user, url: update_profile_path, html: {class: 'form', id: 'update-user-profile', data: {remote: true}}) do |f| %>
         <div class="form-group">
           <%= f.hidden_field :admin_email_delivery %>
           <% button_text = @user.admin_email_delivery ? "On <i class='fas fa-fw fa-toggle-on'></i>".html_safe : "Off <i class='fas fa-fw fa-toggle-off'></i>".html_safe %>
-          <h3>Admin email delivery <%= link_to button_text, '#/', class: 'btn btn-default', id: 'toggle-admin-emails' %></h3>
-          <p class="help-block">Use this toggle to determine whether or not you would like to receive information emails from Single Cell Portal adminsitrators (new feature announcements, unplanned site maintenance, general notices, etc.).</p>
+          <h3>
+            Admin email delivery
+            <%= link_to button_text, '#/', class: 'btn btn-default user-toggle',
+                        data: { input_id: 'user_admin_email_delivery', form_id: 'update-user-profile' } %>
+          </h3>
+          <p class="help-block">
+            Toggles whether or not you would like to receive information emails from Single Cell Portal adminsitrators
+            (new feature announcements, unplanned site maintenance, general notices, etc.).
+          </p>
         </div>
       <% end %>
 
@@ -102,35 +124,45 @@
 <script type="text/javascript" nonce="<%= content_security_policy_script_nonce %>">
 
     $('.toggle-share-subscription').click(function() {
-        var button = $(this);
-        var shareId = button.data('study-share-id');
-        var form = $('#share_subscription_' + shareId);
-        var deliverEmails = form.find("input[name='study_share[deliver_emails]']");
+        let button = $(this);
+        let shareId = button.data('study-share-id');
+        let form = $('#share_subscription_' + shareId);
+        let deliverEmails = form.find("input[name='study_share[deliver_emails]']");
         // toggle hidden form field
-        var newSub = deliverEmails.val() === 'true' ? 'false' : 'true';
+        let newSub = deliverEmails.val() === 'true' ? 'false' : 'true';
         console.log('changing subscription of share ' + shareId + ' to ' + newSub);
         deliverEmails.val(newSub);
         form.submit();
     });
 
     $('.toggle-study-subscription').click(function() {
-        var button = $(this);
-        var studyId = button.data('study-id');
-        var form = $('#study_subscription_' + studyId);
-        var deliverEmails = form.find("input[name='study[default_options][deliver_emails]']");
+        let button = $(this);
+        let studyId = button.data('study-id');
+        let form = $('#study_subscription_' + studyId);
+        let deliverEmails = form.find("input[name='study[default_options][deliver_emails]']");
         // toggle hidden form field
-        var newSub = deliverEmails.val() === 'true' ? 'false' : 'true';
+        let newSub = deliverEmails.val() === 'true' ? 'false' : 'true';
         console.log('changing subscription of share ' + studyId + ' to ' + newSub);
         deliverEmails.val(newSub);
         form.submit();
     });
 
-    $('#toggle-admin-emails').click(function() {
-        var deliverEmails = $('#user_admin_email_delivery');
-        var newSub =  deliverEmails.val() === 'true' ? 'false' : 'true';
-        console.log('changing admin email delivery to ' + newSub);
-        deliverEmails.val(newSub);
-        $('#update-user-profile').submit();
+    $('.user-toggle').click(function() {
+        let inputId = $(this).data('input-id')
+        let formId = $(this).data('form-id')
+        let formField = $("#" + inputId);
+        let value =  formField.val() === 'true' ? 'false' : 'true';
+        formField.val(value);
+        let toggleState = value === 'true' ? 'on' : 'off'
+        let toggleText
+        if (formField === 'user_admin_email_delivery') {
+          toggleText = value === 'true' ? 'On' : 'Off'
+        } else {
+          toggleText = value === 'true' ? '15m' : '24h'
+        }
+        let newText = `${toggleText} <i class='fas fa-fw fa-toggle-${toggleState}'></i>`
+        $(this).html(newText)
+        $("#" + formId).submit();
     });
 
     $(document).ready(function() {
